@@ -8,6 +8,8 @@ xx Jun 2006: 0.2.14 Miek <miek@miek.nl>
      and only check for files that are to be added.
    * Compilation fix for gcc 2.95; don't use %zd in printf
    * Remove rb-tools dir from distribution - not uses & not finished
+   * moved wrapper scripts (dump.sh, dump-here.sh and restore.sh) to
+     sh-wrapper/ directory
 
 26 May 2006: 0.2.13 Miek <miek@miek.nl>
    -- BACKWARD INCOMPATIBLE CHANGES --
